# cmd/server/main.go
@@ -17,6 +17,10 @@ import (
 // @schemes http
 // @produce json
 // @consumes json
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @description Type "Bearer" followed by a space and JWT token.
 func main() {
 	// Load config
 	cfg := config.Load()
